--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@
 #server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost/testdb
 spring.datasource.username=postgres
-spring.datasource.password=PostgreSQL
+spring.datasource.password=root
 spring.jpa.generate-ddl=true
