--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.datasource.url=jdbc:postgresql://localhost/testdb
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+
+spring.jpa.hibernate.ddl-auto=update
