implement spring security back-end

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,18 @@
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.show-sql=false
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
+spring.datasource.username=postgres
+spring.datasource.password=PostgreSQL
 spring.jpa.generate-ddl=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
 
 
-server.port=${DATABASE_PORT}
+ken.jwtSecret= kenSecretKey
+ken.jwtExpirationMs= 86400000
