--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,20 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 
+#spring.datasource.url=jdbc:postgresql://localhost/testdb
+#spring.datasource.username=postgres
+#spring.datasource.password=PostgreSQL
+#spring.jpa.generate-ddl=true
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jackson.serialization.fail-on-empty-beans=false
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.hibernate.ddl-auto= update
 
 
 
