--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.generate-ddl=true
 #spring.datasource.password=PostgreSQL
 #spring.jpa.generate-ddl=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
