--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.jpa.generate-ddl=true
 #spring.datasource.password=PostgreSQL
 #spring.jpa.generate-ddl=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
-spring.jackson.serialization.fail-on-empty-beans=false
+#spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
