--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,16 +5,16 @@
 #spring.jpa.show-sql = true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-
-#spring.datasource.url=jdbc:postgresql://localhost/testdb
-#spring.datasource.username=postgres
-#spring.datasource.password=PostgreSQL
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.show-sql=false
 #spring.jpa.generate-ddl=true
+
+spring.datasource.url=jdbc:postgresql://localhost/testdb
+spring.datasource.username=postgres
+spring.datasource.password=PostgreSQL
+spring.jpa.generate-ddl=true
 
 #spring.jpa.hibernate.ddl-auto=create
 
