--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#MySQL
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost/rentit?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.username=root
@@ -5,28 +6,30 @@
 #spring.jpa.show-sql = true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-#spring.jpa.show-sql=false
-#spring.jpa.generate-ddl=true
-
-spring.datasource.url=jdbc:postgresql://localhost/testdb
-spring.datasource.username=postgres
-spring.datasource.password=PostgreSQL
+#Heroku
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
+#Heroku
 
-#spring.jpa.hibernate.ddl-auto=create
+#Local
+#spring.datasource.url=jdbc:postgresql://localhost/testdb
+#spring.datasource.username=postgres
+#spring.datasource.password=PostgreSQL
+#spring.jpa.generate-ddl=true
+#Local
 
 #spring.jackson.serialization.fail-on-empty-beans=false
 
+#PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 
-
-
+#Auth
 ken.jwtSecret= kenSecretKey
 ken.jwtExpirationMs= 86400000
