--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,18 +7,18 @@
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 #Heroku
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=true
 #Heroku
 
 #Local
-#spring.datasource.url=jdbc:postgresql://localhost/testdb
-#spring.datasource.username=postgres
-#spring.datasource.password=PostgreSQL
-#spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:postgresql://localhost/testdb
+spring.datasource.username=postgres
+spring.datasource.password=PostgreSQL
+spring.jpa.generate-ddl=true
 #Local
 
 #spring.jackson.serialization.fail-on-empty-beans=false
@@ -28,7 +28,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create
 
 #Auth
 ken.jwtSecret= kenSecretKey
