implement email on signUp & rent

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,8 @@ spring.jpa.hibernate.ddl-auto= update
 #Auth
 ken.jwtSecret= kenSecretKey
 ken.jwtExpirationMs= 86400000
+
+spring.mail.host = smtp.rentit24.tech
+spring.mail.port = 587
+spring.mail.username = noreply@rentit24.tech
+spring.mail.password = NmTV(TyL7
