--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 
 #Heroku
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.show-sql=false
+#spring.jpa.generate-ddl=true
 #Heroku
 
 #Local
-#spring.datasource.url=jdbc:postgresql://localhost/testdb
-#spring.datasource.username=postgres
-#spring.datasource.password=PostgreSQL
-#spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:postgresql://localhost/testdb
+spring.datasource.username=postgres
+spring.datasource.password=PostgreSQL
+spring.jpa.generate-ddl=true
 #Local
 
 #spring.jackson.serialization.fail-on-empty-beans=false
