--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 
 #Heroku
-#spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-#spring.jpa.show-sql=false
-#spring.jpa.generate-ddl=true
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
 #Heroku
 
 #Local
-spring.datasource.url=jdbc:postgresql://localhost/testdb
-spring.datasource.username=postgres
-spring.datasource.password=PostgreSQL
-spring.jpa.generate-ddl=true
+#spring.datasource.url=jdbc:postgresql://localhost/testdb
+#spring.datasource.username=postgres
+#spring.datasource.password=PostgreSQL
+#spring.jpa.generate-ddl=true
 #Local
 
 #spring.jackson.serialization.fail-on-empty-beans=false
@@ -24,8 +24,9 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 
 #Auth
-ken.jwtSecret= kenSecretKey
-ken.jwtExpirationMs= 86400000
+ken.jwtSecret=kenSecretKey
+ken.jwtExpirationMs=86400000
+
 
 spring.mail.host = smtp.rentit24.tech
 spring.mail.port = 587
